--- a/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.de.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.de.xlf
@@ -54,9 +54,9 @@
           <target state="signed-off" state-qualifier="mt-suggestion">Verwerfen?</target>
         </trans-unit>
         <trans-unit id="Resx/msgFileIsBinary" translate="yes" xml:space="preserve">
-          <source>This file is neither text nor VisualCrypt - display with Hex View?\r\n\r\nIf file is very large the editor may become less responsive.</source>
-          <target state="signed-off">Diese Datei ist weder Text noch VisualCrypt - Hex-Ansicht anzeigen? \r\n\r\nWenn die Datei zu groß ist kann das Programm sehr langsam werden.</target>
-        </trans-unit>
+          <source>This file is neither text nor VisualCrypt!</source>
+          <target state="needs-review-translation">Diese Datei ist weder Text noch VisualCrypt - Hex-Ansicht anzeigen? \r\n\r\nWenn die Datei zu groß ist kann das Programm sehr langsam werden.</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/msgFindRegExNoMatch" translate="yes" xml:space="preserve">
           <source>No match for '{0}' could be found.</source>
           <target state="signed-off" state-qualifier="mt-suggestion">Keine Übereinstimmung für '{0}' gefunden.</target>
@@ -279,6 +279,18 @@
           <source>Share</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Freigabe</target>
         </trans-unit>
+        <trans-unit id="Resx/fileProgr_Saving" translate="yes" xml:space="preserve">
+          <source>Saving File:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Speichern...</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+        <trans-unit id="Resx/fileProg_MsgAnalyzingContents" translate="yes" xml:space="preserve">
+          <source>Analyzing Contents...</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Inhalt wird analysiert...</target>
+        </trans-unit>
+        <trans-unit id="Resx/fileProgr_Loading" translate="yes" xml:space="preserve">
+          <source>Loading File:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Wird geladen...</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/fileDlgRename" translate="yes" xml:space="preserve">
           <source>Rename Note</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Notiz umbenennen</target>
