--- a/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.it.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.it.xlf
@@ -54,9 +54,9 @@
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Ignorare le modifiche?</target>
         </trans-unit>
         <trans-unit id="Resx/msgFileIsBinary" translate="yes" xml:space="preserve">
-          <source>This file is neither text nor VisualCrypt - display with Hex View?\r\n\r\nIf file is very large the editor may become less responsive.</source>
+          <source>This file is neither text nor VisualCrypt!</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Questo file non è né testo né VisualCrypt - Visualizza con visualizzazione esadecimale? \r\n\r\nIf file è molto grande editor può diventare meno efficiente.</target>
-        </trans-unit>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/msgFindRegExNoMatch" translate="yes" xml:space="preserve">
           <source>No match for '{0}' could be found.</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Non Impossibile trovare alcuna corrispondenza per '{0}'.</target>
@@ -286,6 +286,18 @@
           <source>Share</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Condivisione</target>
         </trans-unit>
+        <trans-unit id="Resx/fileProgr_Saving" translate="yes" xml:space="preserve">
+          <source>Saving File:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Il salvataggio...</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+        <trans-unit id="Resx/fileProg_MsgAnalyzingContents" translate="yes" xml:space="preserve">
+          <source>Analyzing Contents...</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Analisi di contenuto...</target>
+        </trans-unit>
+        <trans-unit id="Resx/fileProgr_Loading" translate="yes" xml:space="preserve">
+          <source>Loading File:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Caricamento...</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/fileDlgRename" translate="yes" xml:space="preserve">
           <source>Rename Note</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Rinominare la nota</target>
