--- a/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.ru.xlf
+++ b/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.ru.xlf
@@ -54,9 +54,9 @@
           <target state="signed-off" state-qualifier="mt-suggestion">Отменить изменения?</target>
         </trans-unit>
         <trans-unit id="Resx/msgFileIsBinary" translate="yes" xml:space="preserve">
-          <source>This file is neither text nor VisualCrypt - display with Hex View?\r\n\r\nIf file is very large the editor may become less responsive.</source>
-          <target state="signed-off">Этот файл не является ни текстом, ни VisualCrypt. Oтобразить с Hex? \r\n\r\nБольшой размер файла ведёт к замедлению работы компьютера.</target>
-        </trans-unit>
+          <source>This file is neither text nor VisualCrypt!</source>
+          <target state="needs-review-translation">Этот файл не является ни текстом, ни VisualCrypt. Oтобразить с Hex? \r\n\r\nБольшой размер файла ведёт к замедлению работы компьютера.</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/msgFindRegExNoMatch" translate="yes" xml:space="preserve">
           <source>No match for '{0}' could be found.</source>
           <target state="signed-off" state-qualifier="mt-suggestion">Не удается найти соответствие для «{0}».</target>
@@ -281,6 +281,18 @@
           <source>Share</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Общий ресурс</target>
         </trans-unit>
+        <trans-unit id="Resx/fileProgr_Saving" translate="yes" xml:space="preserve">
+          <source>Saving File:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Сохранение...</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
+        <trans-unit id="Resx/fileProg_MsgAnalyzingContents" translate="yes" xml:space="preserve">
+          <source>Analyzing Contents...</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Анализ содержимого...</target>
+        </trans-unit>
+        <trans-unit id="Resx/fileProgr_Loading" translate="yes" xml:space="preserve">
+          <source>Loading File:</source>
+          <target state="needs-review-translation" state-qualifier="mt-suggestion">Загрузка...</target>
+          <note from="MultilingualUpdate" annotates="source" priority="2">Please verify the translation’s accuracy as the source string was updated after it was translated.</note></trans-unit>
         <trans-unit id="Resx/fileDlgRename" translate="yes" xml:space="preserve">
           <source>Rename Note</source>
           <target state="needs-review-translation" state-qualifier="mt-suggestion">Переименовать заметку</target>
