--- a/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.resx
+++ b/Common/ApplicationLogic/VisualCrypt.Language.Editing/Strings/Resources.resx
@@ -567,4 +567,7 @@
   <data name="fileProg_MsgAnalyzingContents" xml:space="preserve">
     <value>Analyzing Contents...</value>
   </data>
+  <data name="msgTakesTooLong" xml:space="preserve">
+    <value>If this takes too long on your device, choose less Rounds in Settings.</value>
+  </data>
 </root>
